--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@types/luxon": "^3.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-plugin-module-resolver": "4.1.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
