--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": "./"
   },
+  "extends": "./tsconfig.path.json",
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
