--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^7.3.4",
     "lodash-es": "^4.17.21",
     "luxon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.0",
     "react-scroll-parallax": "^3.3.1",
     "styled-components": "^5.3.5"
   },
@@ -24,7 +26,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-plugin-module-resolver": "4.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "2.6.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
