--- a/package.json
+++ b/package.json
@@ -9,24 +9,33 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.7.4",
     "framer-motion": "^7.3.4",
     "lodash-es": "^4.17.21",
     "luxon": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-router-dom": "5.3.3",
+    "react-router-transition": "^2.1.0",
     "react-scroll-parallax": "^3.3.1",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "three": "^0.144.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
     "@types/luxon": "^3.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-router-transition": "^2.1.2",
     "@types/react-slick": "^0.23.10",
+    "@types/react-transition-group": "^4.4.5",
     "@types/styled-components": "^5.1.26",
+    "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-plugin-module-resolver": "4.1.0",
     "prettier": "2.6.2",
