--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
-    "three": "^0.144.0"
+    "three": "^0.144.0",
+    "tinygesture": "^2.0.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
