--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash-es": "^4.17.21",
     "luxon": "^3.0.3",
     "react": "^18.2.0",
+    "react-animated-numbers": "^0.14.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "5.3.3",
