--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "babel-plugin-module-resolver": "4.1.0",
     "prettier": "2.6.2",
     "typescript": "^4.6.4",
-    "vite": "^3.1.0"
+    "vite": "^3.1.0",
+    "vite-plugin-svgr": "^2.2.1",
+    "vite-svg-loader": "^3.6.0"
   }
 }
