--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "inobounce": "^0.2.1",
     "lodash-es": "^4.17.21",
     "luxon": "^3.0.3",
+    "mobx": "^6.6.2",
+    "mobx-react": "^7.5.3",
     "react": "^18.2.0",
     "react-animated-numbers": "^0.14.0",
     "react-dom": "^18.2.0",
