--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-animated-numbers": "^0.14.0",
     "react-dom": "^18.2.0",
+    "react-flip-numbers": "^3.0.7",
     "react-intersection-observer": "^9.4.0",
     "react-router-dom": "5.3.3",
     "react-router-transition": "^2.1.0",
