--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tinygesture": "^2.0.0"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.4.2",
+    "@ianvs/prettier-plugin-sort-imports": "3.7.1",
     "@types/luxon": "^3.0.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
