--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "@types/three": "^0.144.0",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-plugin-module-resolver": "4.1.0",
+    "glob": "^8.0.3",
     "prettier": "2.6.2",
+    "sharp": "^0.31.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-svgr": "^2.2.1",
