--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-flip-numbers": "^3.0.7",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.1.3",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "6.6.1",
     "react-router-transition": "^2.1.0",
     "react-scroll-parallax": "^3.3.1",
