--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && GENERATE_SOURCEMAP=false vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@react-three/fiber": "^8.7.4",
+    "@types/react-responsive": "^8.0.8",
     "animate.css": "^4.1.1",
     "framer-motion": "^7.3.4",
     "hamburger-react": "^2.5.0",
